* Fix several bugs in cross-multiplication implementation spockPull:2123[]
* Fix filter blocks with shared fields and derived data variables spockPull:2088[]
* Fix combined labels with comments being ignored spockPull:2121[]
* Fix boxed Boolean `is` getter methods not properly mocked in Groovy <= 3 spockIssue:2131[]

Thanks to all the contributors to this release: Andreas Turban, Björn Kautler, Christoph Loy, Marcin Zajączkowski, Pavlo Shevchenko

== 2.4-M5 (2025-01-07)

=== Highlights

* Add support for combining two or more data providers using cartesian product spockIssue:1062[]
* Add support for a `filter` block after a `where` block to filter out unwanted iterations spockPull:1927[]
* Add <<extensions.adoc#block-listener,`IBlockListener`>> extension point to listen to block execution events within feature methods spockPull:1575[]

=== Misc

* Add `globalTimeout` to the  `@Timeout` extension to apply a timeout to all features in a specification, configurable via the Spock configuration file spockPull:1986[]
* Add new <<extensions.adoc#default-value-provider,`IDefaultValueProviderExtension`>> extension point to add support for special classes in the Stub's default `EmptyOrDummyResponse` spockPull:1994[]
* Add support for Groovy-4-style range expressions spockIssue:1956[]
* Add `IStatelessAnnotationDrivenExtension` to allow a single extension instance to be reused across all specifications spockPull:2055[]
* Add new well-known versions to `Jvm` helper to support versions up to `29` spockPull:2057[]
** Built-in extensions have been updated to use this new interface where applicable
* Add best-effort error reporting for interactions on final methods when using the `byte-buddy` mock maker spockIssue:2039[]
* Add support for `@FailsWith` to assert an exception message spockIssue:2039[]
* Add support for accessing the `IStore` via `ISpecificationContext` spockPull:2064[]