@@ -113,6 +113,7 @@ spockPull:2112[]
 * Fix filter blocks with shared fields and derived data variables spockPull:2088[]
 * Fix combined labels with comments being ignored spockPull:2121[]
 * Fix boxed Boolean `is` getter methods not properly mocked in Groovy <= 3 spockIssue:2131[]
+* Fix `SpyStatic()` with an interaction closure throws NullPointerException spockPull:2254[]
 
 Thanks to all the contributors to this release: Andreas Turban, Björn Kautler, Christoph Loy, Marcin Zajączkowski, Pavlo Shevchenko
 
